# mcp-router

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.fly  README.md  SPRINT2_SUMMARY.md  claude.md  default_servers.json  docker-compose.yml  engineering_plan.md  env.example  fly.toml  idea.md  idea.md.bak  inspector_config.json  project.md  pyproject.toml  requirements.txt  setup-deploy.sh  setup.sh  test_oauth_flow.py
mcp_router/: __init__.py  main.py
mcp_router/api/: __init__.py
mcp_router/api/routes/: __init__.py  config.py  health.py  mcp.py  servers.py
mcp_router/config/: __init__.py  settings.py
mcp_router/core/: __init__.py  client.py  router.py  transport.py
mcp_router/models/: __init__.py  database.py  schemas.py
mcp_router/services/: __init__.py  container_manager.py  github_service.py
mcp_router/utils/: __init__.py  logging.py  metrics.py
old/: FastMCPAuth.md
src/mcp_anywhere/: __init__.py  __main__.py  base.py  claude_analyzer.py  config.py  database.py  database_utils.py  logging_config.py
src/mcp_anywhere/auth/: __init__.py  csrf.py  initialization.py  mcp_provider.py  mcp_routes.py  middleware.py  models.py  oauth_server.py  provider.py  routes.py  token_verifier.py
src/mcp_anywhere/container/: manager.py
src/mcp_anywhere/core/: __init__.py  base_middleware.py  mcp_manager.py  middleware.py
src/mcp_anywhere/transport/: __init__.py  http_server.py  stdio_gateway.py  stdio_server.py
src/mcp_anywhere/web/: app.py  config_routes.py  forms.py  mcp_mount.py  middleware.py  routes.py
src/mcp_anywhere/web/templates/: base.html  index.html
src/mcp_anywhere/web/templates/auth/: consent.html  login.html
src/mcp_anywhere/web/templates/servers/: add.html  detail.html
src/mcp_router/: __init__.py  __main__.py  app.py  asgi.py  auth.py  claude_analyzer.py  config.py  container_manager.py  forms.py  mcp_oauth.py  middleware.py  models.py  server.py  server_manager.py  web.py
src/mcp_router/routes/: config.py  mcp.py  servers.py
src/mcp_router/templates/: 404.html  500.html  base.html  index.html  mcp_control.html
src/mcp_router/templates/partials/: mcp_status.html
src/mcp_router/templates/servers/: add.html  add_form.html  detail.html  edit.html
tests/: __init__.py  conftest.py  test_add_server.py  test_async_database.py  test_async_models_migration.py  test_auth.py  test_auth_flow.py  test_auth_models.py  test_auth_routes.py  test_claude_analyzer.py  test_claude_analyzer_runtime_detection.py  test_config_routes.py  test_container_cleanup.py  test_container_integration.py  test_container_lifecycle_management.py  test_container_manager.py  test_csrf_protection.py  test_delete_server.py  test_docker_config.py  test_env_vars_extraction.py  test_favicon_route.py  test_health.py  test_htmx_analyze_button.py  test_htmx_redirect_headers.py  test_http_client.py  test_http_mode.py  test_http_transport.py  test_jwt_middleware.py  test_log_deduplication.py  test_main.py  test_main_cli.py  test_mcp_http_transport.py  test_mcp_manager.py  test_mcp_proxy.py  test_mcp_router.py  test_mcp_trailing_slash.py  test_middleware_provider_filter.py  test_models.py  test_oauth_consent_integration.py  test_oauth_fixes.py  (+18 more)
