[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-router"
version = "0.1.0"
description = "Unified gateway for Model Context Protocol servers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MCP Router Team", email = "team@mcprouter.dev"}
]
dependencies = [
    "flask>=2.3.3",
    "flask-sqlalchemy>=3.0.5",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.0",
    "fastmcp>=2.0.0",
    "llm-sandbox>=0.1.0",
    "anthropic>=0.8.0",
    "httpx>=0.25.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
mcp-router = "mcp_router.server:main"
mcp-router-web = "mcp_router.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_router = ["templates/**/*.html", "static/**/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true 